@@ -1,3 +1,9 @@
+2008-05-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ima/resources/uk.ts:
+	* ima/resources/uk.qm:
+	updated Ukrainian localization-files by Yuri Chornoivan
+
 2008-05-06	Andrei Krueger	<anc/at/iki/dot/fi>
 
 	* ima/src/main.cpp:
@@ -7,7 +13,7 @@
 	* ima/resources/fi.qm:
 	updated Finnish localization
 
-2008-04-21	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>
+2008-05-05	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>
 
 	* ima/resources/it.qm:
 	* ima/resources/it.ts:
